# learnchain

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  LICENSE  README.md  learnchain-cli-0.1.0.tgz  package-lock.json  package.json
.github/workflows/: build-binaries.yml  publish-npm.yml
config/: app_config.toml
scripts/: generate-launcher.js  install.js  run_with_logs.sh
src/: ai_manager.rs  config.rs  knowledge_store.rs  learning_manager.rs  log_util.rs  main.rs  markdown_rules.rs  output_manager.rs  session_manager.rs  ui_renderer.rs
src/view_managers/: analytics_manager.rs  config_manager.rs  events_manager.rs  learning_manager.rs  menu_manager.rs  mod.rs
test_artifacts/: claude_code_events_sample.jsonl  multiple_knowledge_type_groups.json  single_knowledge_type_group.json
test_fixtures/: codex_events_sample.jsonl
