[package]
name = "learnchain"
version = "0.1.0"
description = "learn to code while using genai to build"
authors = ["Dave Norman <david.norman.w@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rand = "0.9"
